--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "swiper": "^11.1.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.75",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
