--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "aos": "^2.3.4",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.25",
+    "gsap": "^3.12.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +24,7 @@
     "swiper": "^11.1.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "20.12.7",
     "@types/react": "18.2.75",
     "autoprefixer": "^10.4.19",
